tests/coverage/misc/fail/negative/regex_literals/001_unclosed_class.js
// Expected error: unterminated character class.
const r = /[a/
